--- a/README.rdoc
+++ b/README.rdoc
@@ -14,25 +14,34 @@ SDK and be submitted to the TestFlight platform.
 
 == Setup
 
-1. Download the TestFlight SDK package from https://testflightapp.com/sdk/download/ and unpack it into the +vendor/TestFlightSDK+ directory of your RubyMotion project. Create the +vendor+ directory if it does not exist. You should have something like this.
+1. App the TestFlight SDK to your project:
+
+   Using Cocoapods:
+
+     app.pods do
+       ...
+       pod 'TestFlightSDK',     '~> 1.3.0.beta5'
+       ...
+     end
+
+   Or you can download the TestFlight SDK package from https://testflightapp.com/sdk/download/ and unpack it into the +vendor/TestFlightSDK+ directory of your RubyMotion project. Create the +vendor+ directory if it does not exist. You should have something like this:
 
      $ ls vendor/TestFlightSDK
      README.txt			libTestFlight.a
-     TestFlight.h			release_notes.txt
+     TestFlight.h	        release_notes.txt
 
 2. Edit the +Rakefile+ of your RubyMotion project and add the following require lines.
 
      require 'rubygems'
      require 'motion-testflight'
 
-3. Still in the +Rakefile+, set up the +sdk+, +api_token+ and +team_token+ variables in your application configuration block.
+3. Still in the +Rakefile+, set up +api_token+ and +team_token+ variables in your application configuration block.
 
      Motion::Project::App.setup do |app|
        # ...
        app.development do
          # ...
          app.testflight do
-           app.testflight.sdk = 'vendor/TestFlight'
            app.testflight.api_token = '<insert your API token here>'
            app.testflight.team_token = '<insert your team token here>'
            app.testflight.notify = true # default is false
@@ -44,12 +53,21 @@ SDK and be submitted to the TestFlight platform.
    You can retrieve the values for +api_token+ and +team_token+ in your TestFlight account page.
 
    If you're using Testflight 1.2 or above, you should also add the app_token.
-  
+
       # ...
       app.testflight do
         # ...
 
         app.testflight.app_token = '<insert your APP token here>'
+      end
+
+   If you're not using Cocoapods, you'll also have to vendor the Testflight SDK into your project. motion-testflight offers a shortcut for this:
+
+      # ...
+      app.testflight do
+        # ...
+
+        app.testflight.sdk = 'vendor/TestFlightSDK'
       end
 
 4. (Optional) You can also set up distribution lists, if needed.
@@ -71,13 +89,13 @@ motion-testflight introduces a +testflight+ Rake task to your project, which can
   All rights reserved.
   
   Redistribution and use in source and binary forms, with or without
-  modification, are permitted provided that the following conditions are met: 
+  modification, are permitted provided that the following conditions are met:
   
   1. Redistributions of source code must retain the above copyright notice, this
-     list of conditions and the following disclaimer. 
+     list of conditions and the following disclaimer.
   2. Redistributions in binary form must reproduce the above copyright notice,
      this list of conditions and the following disclaimer in the documentation
-     and/or other materials provided with the distribution. 
+     and/or other materials provided with the distribution.
   
   THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
   ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
